--- a/src/scss/sections/_minid-menu.scss
+++ b/src/scss/sections/_minid-menu.scss
@@ -128,7 +128,7 @@
   margin: 1.5em auto;
   text-align: right;
   img {
-    max-height: 30px;
+    max-height: 32px;
     width: auto;
     margin-right: 1em;
   }
